very minor updates to index and stylesheet; script score-keeping changed to leave final score visible when win/loss is declared

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   <div class="containerTop">
     <header>rock_paper_scissors</header>
     <div class="directions">
-      use <strong>R</strong>, <strong>P</strong>, and <strong>S</strong> keys to choose your play
+        use <strong>R</strong>, <strong>P</strong>, and <strong>S</strong> keys to choose your play
+        <br>first to 5 wins
     </div>
-    <div class="directions">first to 5 wins</div>
   </div>
 
   <div class="containerBottom">
