--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Rock, Paper, Scissors</title>
   <meta charset="UTF-8"/>
-  <link rel="styles" href="styles.css">
+  <link rel="stylesheet" href="styles.css">
   <script src="script.js" defer></script>
 </head>
 <body>
